<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/spinner"
            style="@style/mySpinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="48dp"
            android:background="@color/light_grey"
            android:dropDownWidth="300dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="horizontal|vertical"
            android:verticalScrollbarPosition="left"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <CheckBox

                android:id="@+id/checkBox"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:text="@string/Randomize"
                android:textColor="@color/light_blue_ish" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:text="@string/Run"
                android:textColor="@color/light_blue_ish" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:text="@string/Delete"
                android:textColor="@color/light_blue_ish" />

            <Button
                android:id="@+id/user_map_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:text="@string/User_Map"
                android:textColor="@color/light_blue_ish" />

        </LinearLayout>

        <EditText
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/light_blue_ish"
            android:textSize="25dp"
            android:typeface="monospace"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>